# obscura

./: .gitignore  .pre-commit-config.yaml  .yamllint.yaml  LICENSE.md  README.md  Taskfile.yaml  dev-requirements.txt  pyproject.toml
.github/workflows/: ci.yaml  release.yaml  test-release.yaml
src/: obscura.py
tests/: conftest.py  tests.py
